# mle_containerization

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  evaluation.json  lint.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
airflow/: Dockerfile  airflow.cfg
data/: .gitignore  train_sample.csv.dvc
evaluation/plots/: confusion_matrix.json  precision_recall.json  roc.json
mlflow/: Dockerfile
notebooks/: tps-oct-21-eda-modeling.ipynb
src/: evaluate.py  featurize.py  prepare.py  train.py  utils.py
src/models/: models.py
src/scripts/: evaluate.sh  featurize.sh  prepare.sh  run_pipeline.sh  train.sh
src/test/: test_pipeline.py
src/test/data/: test_sample.csv
volume/: .gitignore
