[tool.black]
line-length = 88

[tool.pylint.messages_control]
max-line-length = 88
disable = "C0413, W0621, W1514, R1732, C0303"

[tool.poetry]
name = "mle_containerization"
version = "0.1.0"
description = ""
authors = ["Aleksandr Fida"]

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.0.1"
dvc = {extras = ["s3", "ssh", "azure", "all"], version = "^2.34.2"}
webdav4 = '^0.9.8'
ossfs = '^2021.8.0'
dvc-webhdfs = '^2.19.0'
dvc-webdav = '^2.19.0'
dvc-oss = '^2.19.0'
dvc-hdfs = '^2.19.0'
dvc-gs = '^2.20.0'
dvc-gdrive = '^2.19.1'

[tool.poetry.dev-dependencies]
numpy = "^1.23.4"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
loguru = "^0.6.0"
PyYAML = "^6.0"
dvc = {extras = ["all"], version = "^2.34.2"}
dvclive = "^1.0.1"
black = "^22.10.0"
pytest = "^7.2.0"
pylint = "^2.15.5"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
